2024-02-02T16:17:06Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7758618370 # 80
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
* notice: last 14d: unq all: 7 4153
* notice: prev accum: outdated-unq outdated-all / unq all: 1900 184021 / 1935 188340
* notice: next accum: outdated-unq outdated-all / unq all: 1900 184021 / 1935 188434
* notice: prev exec diff / last date diff / accum: unq all: +0 +94 -1 -93 / +2 +206 -0 -0 / 2 206
* notice: removed / changed dates: [] / [2024-01-19 2024-02-02]

2024-02-02T08:18:09Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7753211378 # 79
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
* notice: last 14d: unq all: 7 4152
* notice: prev accum: outdated-unq outdated-all / unq all: 1900 184021 / 1933 188228
* notice: next accum: outdated-unq outdated-all / unq all: 1900 184021 / 1935 188340
* notice: prev exec diff / last date diff / accum: unq all: +2 +112 -0 -91 / +2 +112 -0 -0 / 2 112
* notice: removed / changed dates: [] / [2024-01-19 2024-02-02]

2024-02-02T01:04:45Z:
* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7749875720 # 78
* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
* notice: last 14d: unq all: 7 4131
* notice: prev accum: outdated-unq outdated-all / unq all: 1897 183720 / 1933 188133
* notice: next accum: outdated-unq outdated-all / unq all: 1900 184021 / 1933 188228
* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -0 -76 / +2 +300 -0 -0 / 2 300
* notice: removed / changed dates: [2024-01-18] / [2024-01-19 2024-02-01]

2024-02-01T16:18:25Z: