@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2024-02-02T16:17:06Z",
-  "count" : 206,
-  "count_minmax" : [ 112, 206 ],
-  "count_decinc" : [ -0, +206 ],
+  "timestamp" : "2024-02-03T01:03:32Z",
+  "count" : 301,
+  "count_minmax" : [ 112, 301 ],
+  "count_decinc" : [ -0, +301 ],
   "uniques" : 2,
   "uniques_minmax" : [ 2, 2 ],
   "uniques_decinc" : [ -0, +2 ]
