@@ -1,27 +1,18 @@
 {
-  "timestamp" : "2024-02-02T16:17:06Z",
-  "count_outdated" : 184021,
-  "uniques_outdated" : 1900,
-  "count" : 188434,
+  "timestamp" : "2024-02-03T01:03:32Z",
+  "count_outdated" : 184321,
+  "uniques_outdated" : 1902,
+  "count" : 188529,
   "uniques" : 1935,
   "clones" : [
     {
-      "timestamp": "2024-01-19T00:00:00Z",
-      "count": 40,
-      "count_minmax": [ 40, 300 ],
-      "count_decinc": [ 260, 300 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 2 ],
-      "uniques_decinc": [ 1, 2 ]
-    },
-    {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 302,
+      "count": 225,
       "count_minmax": [ 113, 302 ],
-      "count_decinc": [ 0, 302 ],
-      "uniques": 4,
+      "count_decinc": [ 77, 302 ],
+      "uniques": 3,
       "uniques_minmax": [ 3, 4 ],
-      "uniques_decinc": [ 0, 4 ]
+      "uniques_decinc": [ 1, 4 ]
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-02T00:00:00Z",
-      "count": 206,
-      "count_minmax": [ 112, 206 ],
-      "count_decinc": [ 0, 206 ],
+      "count": 301,
+      "count_minmax": [ 112, 301 ],
+      "count_decinc": [ 0, 301 ],
       "uniques": 2,
       "uniques_minmax": [ 2, 2 ],
       "uniques_decinc": [ 0, 2 ]
