@@ -1,16 +1,11 @@
 {
-  "count": 4153,
-  "uniques": 7,
+  "count": 4131,
+  "uniques": 6,
   "clones": [
     {
-      "timestamp": "2024-01-19T00:00:00Z",
-      "count": 40,
-      "uniques": 1
-    },
-    {
       "timestamp": "2024-01-20T00:00:00Z",
-      "count": 302,
-      "uniques": 4
+      "count": 225,
+      "uniques": 3
     },
     {
       "timestamp": "2024-01-21T00:00:00Z",
@@ -74,7 +69,7 @@
     },
     {
       "timestamp": "2024-02-02T00:00:00Z",
-      "count": 206,
+      "count": 301,
       "uniques": 2
     }
   ]
