@@ -1,3 +1,12 @@
+2024-02-03T01:03:32Z:
+* notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7763403476 # 81
+* notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-03
+* notice: last 14d: unq all: 6 4131
+* notice: prev accum: outdated-unq outdated-all / unq all: 1900 184021 / 1935 188434
+* notice: next accum: outdated-unq outdated-all / unq all: 1902 184321 / 1935 188529
+* notice: prev exec diff / last date diff / accum: unq all: +0 +95 -1 -77 / +2 +301 -0 -0 / 2 301
+* notice: removed / changed dates: [2024-01-19] / [2024-01-20 2024-02-02]
+
 2024-02-02T16:17:06Z:
 * notice: GitHub Actions Run: https://github.com/andry81-devops/actions/actions/runs/7758618370 # 80
 * notice: Stats Output Repository: https://github.com/andry81-stats/gh-workflow--gh-stats/commits?branch=master&time_zone=utc&until=2024-02-02
